--- a/frontend/views/movies.html
+++ b/frontend/views/movies.html
@@ -1,29 +1,29 @@
 <div class="continut bg-gray mt-5">
     <div class="wrapper-movies flex-column mx-auto col-md-9">
         <div class="row flex-column justify-content-center">
-            
-                <div class="form-group col-md-12 text-center mb-5" >
-                    <div class="row">
-                <div  class="date-select col-md-3">Select a date</div>
-              
 
-                        <div class="control col-md-5">
-                            <input id="date-birth" class="form-control " type="date" ng-model="dateBirth"></div>
-                           <div class="col-md-4">
-                            <button type="submit" class="btn btn-danger float-left " ng-click="search()">Search</button>
-                        </div>
+            <div class="form-group col-md-12 text-center mb-5">
+                <div class="row">
+                    <div class="date-select col-md-3">Select a date</div>
+
+
+                    <div class="control col-md-5">
+                        <input id="date-birth" class="form-control " type="date" ng-model="dateBirth"></div>
+                    <div class="col-md-4">
+                        <button type="submit" class="btn btn-danger float-left " ng-click="search()">Search</button>
                     </div>
-                        <div class="row" ng-if="clicked">
-                       <p class="date-select" >
-                      
-                            Date : {{ dateBirth | date: 'fullDate' }}</p>
-                            </div>
+                </div>
+                <div class="row" ng-if="clicked">
+                    <p class="date-select">
+
+                        Date : {{ dateBirth | date: 'fullDate' }}</p>
+                </div>
 
             </div>
         </div>
 
-        <div class="row" >
-                 
+        <div class="row">
+
             <table class="table  table-borderless">
                 <thead>
                     <tr>
@@ -37,7 +37,8 @@
                 <tbody role="rowgroup">
                     <tr role="row" ng-repeat="movie in movies">
                         <td style="width:auto;">
-                            <p class="movie-title"><img ng-src="../images/{{movie.src}}" class="movie-image" >{{movie.title}}</p>
+                            <p class="movie-title"><img ng-src="../images/{{movie.src}}"
+                                    class="movie-image">{{movie.title}}</p>
                         </td>
                         </td>
                         <td style="width:auto;">
@@ -54,44 +55,47 @@
             </table>
         </div>
     </div>
-  
-    <style>
-    .movie-modal{
-    font-size: 23px;
-    font-family: 'Archivo Narrow',cursive;
-    color: white;
-
-}
-    </style>
 </div>
 <style>
+    .movie-modal {
+        font-size: 23px;
+        font-family: 'Archivo Narrow', cursive;
+        color: white;
+    }
+
     /*
         Max width before this PARTICULAR table gets nasty. This query will take effect for any screen smaller than 760px and also iPads specifically.
         */
-    .movie-image{
-        width:60px;
-        height:50px;
-        float:left;
-        margin-right:20px;
+    .movie-image {
+        width: 60px;
+        height: 50px;
+        float: left;
+        margin-right: 20px;
     }
+
     .img-movie {
         height: auto;
         width: 60px;
         margin-right: 20px;
     }
-    .table td{
-        text-align:center;
-        border-top :none !important;
+
+    .table td {
+        text-align: center;
+        border-top: none !important;
     }
+
     @media only screen and (max-width: 760px),
     (min-device-width: 768px) and (max-device-width: 1024px) {
+
         /* Force table to not be like tables anymore */
-        .movie-title{
-            font-size:14px;
+        .movie-title {
+            font-size: 14px;
         }
-        .movie-title.movie-attr{
-            margin-top:25px;
+
+        .movie-title.movie-attr {
+            margin-top: 25px;
         }
+
         table,
         thead,
         tbody,
@@ -100,29 +104,34 @@
         tr {
             display: block;
         }
+
         /* Hide table headers (but not display: none;, for accessibility) */
         thead tr {
             position: absolute;
             top: -9999px;
             left: -9999px;
         }
-        .movie-image{
-            float:none;
-            margin-right:10px;
-            margin-top:10px;
-            height:70px;
+
+        .movie-image {
+            float: none;
+            margin-right: 10px;
+            margin-top: 10px;
+            height: 70px;
         }
+
         .table td {
             padding-left: 110px;
             padding-top: 1px;
             padding-right: 1px;
             padding-bottom: 1px;
             border-top: 1px solid white !important;
-        
+
         }
+
         tr {
             margin: 0 0 1rem 0;
         }
+
         td {
             /* Behave  like a "row" */
             border: none;
@@ -130,6 +139,7 @@
             position: relative;
             padding-left: 50%;
         }
+
         td:before {
             /* Now like a table header */
             position: absolute;
@@ -140,26 +150,33 @@
             padding-right: 10px;
             white-space: nowrap;
         }
+
         /*
           Label the data
           You could also use a data-* attribute and content for this. That way "bloats" the HTML, this way means you need to keep HTML and CSS in sync. Lea Verou has a clever way to handle with text-shadow.
           */
         td:nth-of-type(1):before {
-            content: "Movie";margin-left:-25px;
+            content: "Movie";
+            margin-left: -25px;
         }
+
         td:nth-of-type(2):before {
-            content: "Start";margin-left:-25px;
+            content: "Start";
+            margin-left: -25px;
         }
+
         td:nth-of-type(3):before {
-            content: "Room";margin-left:-25px;
+            content: "Room";
+            margin-left: -25px;
         }
+
         td:nth-of-type(4):before {
             content: "";
         }
+
         td:nth-of-type(5):before {
             content: "";
         }
-       
+
     }
-        </style>
-        
+</style>
