--- a/frontend/views/partials/modals/moviedetails.html
+++ b/frontend/views/partials/modals/moviedetails.html
@@ -4,9 +4,7 @@
             <!-- Modal Header -->
             <div class="col-md-6">
                 <img ng-src="../../../images/{{movie.src}}" class="mx-auto" style="width:100%;height: 100%">
-
             </div>
-
             <!-- Modal body -->
             <div class="col-md-6 mt-5">
                 <p class="movie-modal"><strong>Title : </strong>{{movie.title}}</p>
@@ -14,7 +12,8 @@
                 <p class="movie-modal"><strong>Room : </strong>{{movie.room}}</p>
                 <p class="movie-modal"><strong>Cast : </strong>{{movie.actors}}</p>
                 <p class="movie-modal"> <strong>Date : </strong>{{movie.date}}</p>
-                <p class="movie-modal" style="word-wrap: break-word;"><strong>Description : </strong>{{movie.description}} </p>
+                <p class="movie-modal" style="word-wrap: break-word;"><strong>Description :
+                    </strong>{{movie.description}} </p>
             </div>
         </div>
     </div>
