--- a/frontend/views/book.html
+++ b/frontend/views/book.html
@@ -1,28 +1,4 @@
-<!DOCTYPE html>
-<html lang="en" >
 
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Cinemagic | Home</title>
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js">
-    </script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.2.1/jquery.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
-        integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
-        crossorigin="anonymous"></script>
-
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/ng-dialog/1.0.1/css/ngDialog.min.css">
-    <link rel="stylesheet"
-        href="https://cdnjs.cloudflare.com/ajax/libs/ng-dialog/1.0.1/css/ngDialog-theme-default.min.css">
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.6.1/angular.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/ng-dialog/1.0.1/js/ngDialog.min.js"></script>
-</head>
 <style>
 .bms
   header
@@ -160,11 +136,11 @@
       border: 0;
       cursor: default}
 </style>
-<body>
 
 
 
-<div class="row" ng-app="quantityModule" ng-controller="quantityModuleController">
+
+<div class="row"  ng-controller="quantityModuleController">
         <div class="col-md-12">
             <div class="container input-card mt-3">
                 <div class="row">
@@ -211,270 +187,8 @@
     
         </div>
     </div>
-    <script>
-       var app= angular.module('quantityModule', []);
    
-    app.controller('quantityModuleController', ['$scope', '$window','seatsManager', function($scope, $window, seatsManager) {
-            var init = function() {
-              
-                $scope.standardSeats = seatsManager.getSeats('Standard');
-                $scope.seats = seatsManager;
-                $scope.quantities = [{
-                    id: 0,
-                    val: 0
-                }, {
-                    id: 1,
-                    val: 1
-                }, {
-                    id: 2,
-                    val: 2
-                }, {
-                    id: 3,
-                    val: 3
-                }, {
-                    id: 4,
-                    val: 4
-                }, ];
-               
-                $scope.seatQuality = 'Standard';
-                $scope.selectedCount = $scope.quantities[1];
-                seatsManager.setAvailCount($scope.selectedCount);
-            }
 
-            $scope.storeSeat = function() {
-                if ($scope.seats.availCount.val != 0) {
-                    $window.alert("You haven't selected " +
-                        $scope.seats.availCount.val + " seats");
-                    return;
-                }
-                var sessionInfo = seatsManager.bookCheckedSeats();
-                seatsManager.setAvailCount($scope.selectedCount);
-
-                // console.log(sessionInfo.checkedSeats);
-
-                $scope.alertMsg = [];
-                angular.forEach(sessionInfo.checkedSeats, function(v, k) {
-                    for (var i = 0; i < v.length; i++) {
-                        $scope.alertMsg.push(v[i].val + v[i].letter);
-                    }
-                });
-                
-                $window.alert('Thank you for Booking ' + sessionInfo.count + ' seats. ' + 
-                        'Your seats are: ' + $scope.alertMsg.join(', '));
-            };
-
-        init();
-    }]);
-
-   
-    app.factory('seatsManager', SeatsFactory);
-
-function SeatsFactory($rootScope, $timeout) {
-    drawSeats = function(startLetter, rows, cols) {
-        var rowArray = [],
-            columnArray = [];
-        for (var i = 0, k = startLetter; i < rows; i++, k++) {
-            for (var j = 1; j <= cols; j++) {
-                columnArray.push({
-                    val: j,
-                    letter: String.fromCharCode(k),
-                    check: false,
-                    booked: false
-                });
-            }
-            rowArray.push(columnArray);
-            columnArray = [];
-        }
-        return rowArray;
-    }
-
-
-    var seats = {
-           
-            'Standard': {
-                visible: true,
-                seats: drawSeats(65, 7, 10)
-            }
-        },
-        checkedSeatCount = 0,
-        currentSelectionSession = {},
-        DEFAULT_SELECT_SESSION = {
-            checkedSeats: {},
-            count: 0,
-            total: 0.0
-        };
-
-
-    function init() {
-        currentSelectionSession = angular.copy(DEFAULT_SELECT_SESSION);
-    }
-    init();
-
-
-
-    function checkSelected(newCount) {
-        if (checkedSeatCount === 0) {
-            factory.availCount = angular.copy(newCount);
-        } else if (newCount.val > checkedSeatCount) {
-
-            factory.availCount.val = (newCount.val - checkedSeatCount);
-        } else {
-            removeAllCheck();
-            checkedSeatCount = 0;
-        }
-    }
-
-    function removeAllCheck() {
-        keys = Object.keys(seats);
-        for (var rang = 0; rang < keys.length; rang++) {
-            var key = keys[rang];
-            var curSeats = seats[key].seats;
-            for (var row = 0; row < curSeats.length; row++) {
-                for (var col = 0; col < curSeats[row].length; col++) {
-                    if (!curSeats[row][col].booked) {
-                        curSeats[row][col].check = false;
-                        removeSeatFromSession(key, curSeats[row], col);
-                    }
-                }
-            }
-        }
-        checkedSeatCount = 0;
-    }
-
-    function storeSeatInSession(rang, row, seatIndex) {
-        if (angular.isUndefined(currentSelectionSession
-                .checkedSeats[rang])) {
-            currentSelectionSession
-                .checkedSeats[rang] = [];
-        }
-
-        var seat = angular.copy(row[seatIndex]);
-
-        delete seat['$$hashKey'];
-        delete seat['check'];
-        delete seat['booked'];        
-
-        currentSelectionSession.checkedSeats[rang].push(seat);
-        // console.log(currentSelectionSession);
-    }
-
-    function removeSeatFromSession(rang, row, seatIndex) {
-        if (currentSelectionSession.checkedSeats[rang]) {
-            delete currentSelectionSession.checkedSeats[rang].pop();
-        }
-    }
-
-    function selectSeats(selection, count) {
-        var row = selection.row,
-            seat = selection.seat,
-             borderDistance,
-            rest,
-            lastIndex,
-            lastIndexBookedCheck; 
-
-        if (!seat.booked && !seat.check) {
-            if (factory.availCount.val == 0) {
-                factory.availCount = angular.copy(count);
-                console.log(count);
-                removeAllCheck();
-            }
-
-            lastIndexBookedCheck = row.indexOf(seat) + factory.availCount.val;
-
-            if (lastIndexBookedCheck > row.length)
-                lastIndexBookedCheck = row.length;
-
-            borderDistance = row.length - row.indexOf(seat);
-
-            for (var i = row.indexOf(seat); i < lastIndexBookedCheck; i++) {
-                if (row[i].booked) {
-                    borderDistance = i - row.indexOf(seat);
-                    i = row.length;
-                    lastIndex = row.indexOf(seat) + borderDistance;
-                }
-            }
-
-            rest = borderDistance > factory.availCount.val ? 0 :
-                factory.availCount.val - borderDistance;
-
-        /*  console.log('Last Index: ' + lastIndex);
-            console.log('Rest: ' + rest);
-            console.log('Border Distance: ' + borderDistance);
-             console.log('Last Index Booked Check: ' + lastIndexBookedCheck);
-             */
-            if (!lastIndex) {
-                lastIndex = rest > 0 ? row.length :
-                    row.indexOf(seat) + factory.availCount.val;
-            }
-
-            for (var seatIndex = row.indexOf(seat); seatIndex < lastIndex; seatIndex++) {
-                row[seatIndex].check = true;
-                storeSeatInSession(selection.rang, row, seatIndex);
-                checkedSeatCount++;
-            }
-            factory.availCount.val = rest;
-
-        } 
-    }
-
-    function bookCheckedSeats() {
-        var keys = Object.keys(seats),
-            bookedSession;
-        for (var rang = 0; rang < keys.length; rang++) {
-            var key = keys[rang];
-            var curSeats = seats[key].seats;
-
-            // console.log('Checked Seats '+ seats[key].seats);
-
-            for (var row = 0; row < curSeats.length; row++) {
-                for (var col = 0; col < curSeats[row].length; col++) {
-                    if (curSeats[row][col].check) {
-                        curSeats[row][col].booked = true;
-                        curSeats[row][col].check = false;
-                    }
-                }
-            }
-        }
-
-        currentSelectionSession.count = checkedSeatCount;
-        checkedSeatCount = 0;
-        bookedSession = angular.copy(currentSelectionSession);
-
-        // console.log(bookedSession);
-
-        currentSelectionSession = angular.copy(DEFAULT_SELECT_SESSION);
-
-        // console.log(currentSelectionSession);
-        
-        return bookedSession;
-    }
-
-    var factory = {
-        drawSeats: drawSeats,
-        map: seats,
-        select: selectSeats,
-        availCount: {},
-        setAvailCount: function(count) {
-            checkSelected(count);
-        },
-        getSeats: function(rang) {
-            return seats[rang];
-        },
-        showQuality: function(rang) {
-            angular.forEach(Object.keys(seats), function(curRang) {
-                seats[rang].visible = (curRang === rang);
-            });
-            this.availCount.val = this.availCount.id;
-            removeAllCheck();
-        },
-        bookCheckedSeats: bookCheckedSeats
-    };
-    return factory
-}
-    </script>
-
-    <script>
     
-    </script>
-    </body>
-    </html>
+    
+   
