--- a/frontend/css/movies.css
+++ b/frontend/css/movies.css
@@ -12,6 +12,9 @@
 	height:auto;
 
 }*/
+.height{
+	min-height:270px;
+}
 .btn-about{
 	border: 3px solid #e0661f !important;
 	background-color:transparent;
@@ -30,7 +33,8 @@
     color: white;
     font-weight: bold;
     float:left;
-    margin:auto;
+	margin:auto;
+	margin-right:35px;
 }
 th{
 text-align: center !important;
