--- a/frontend/views/book.html
+++ b/frontend/views/book.html
@@ -8,7 +8,9 @@
     color: orange;}
 
  .bms .input-card{
-    display: block}
+    display: block
+}
+
     select{
       width: auto;
       font-size: 14px;
@@ -51,7 +53,7 @@
   {
       color: white;
       background: orange;
-  }
+  } 
   .seatR
   {
     margin-right: 6px;
@@ -67,17 +69,18 @@
  table
     a
       {display: inline-block;
-      width: 40px;
-      height: 40px;
+      width: 30px;
+      height: 30px;
       border-radius: 26%;
       color: #aaa;
       text-align: center;
-      font-size: 14px;
+      font-size: 12px;
       font-weight: bold;
-      line-height: 40px}
+      line-height: 30px;
+      margin-right: 5px;}
       table .available
-     { background: #fff;
-      box-shadow: inset 0 0 0 1px orange;
+     { background: rgb(46, 148, 15);
+      box-shadow: inset 0 0 0 1px green;
       cursor: pointer;}
 
      table .available:hover{
@@ -89,8 +92,8 @@
        color: white}
 
   table  .blocked
-    {  background: #eaeaea;
-      color: #aaa;
+    {  background: #df3333;
+      color: rgb(27, 26, 26);
       box-shadow: 0;
       border: 0;
       cursor: default
@@ -135,59 +138,147 @@
       box-shadow: 0;
       border: 0;
       cursor: default}
+     .alignement{
+         margin-top:20px;
+     }
+     .screen{
+        height:15px;
+        background-color: gray;
+        box-shadow: #aaa 3px solid;
+        margin-top:0px;
+        font-size: 12px;
+        text-align: center;width:350px;
+     }
+     .btn-legend{
+        width: 40px;
+        height: 40px;
+        margin-right: 10px; 
+        float:left;
+     }
+     .Displaytable
+{
+  text-align:center;
+}
+.Displaytable td, .Displaytable th {
+    border: 1px solid;
+    text-align: left;
+}
+
+textarea
+{
+  border:none;
+  background:transparent;
+}
+.bg-book{
+    background-image: url('../../../images/book5.jpg');
+    background-size: cover;
+    background-repeat: no-repeat;
+    min-height: 600px;
+}
+#white{
+    color:white;
+}
+.top-margin{
+    margin-top: 40px;
+}
 </style>
 
 
 
 
-<div class="row"  ng-controller="quantityModuleController">
-        <div class="col-md-12">
-            <div class="container input-card mt-3">
-                <div class="row">
-                    <p>
-                        No of Quantity:
-                    </p>
-                    <select ng-model="selectedCount" ng-change="seats.setAvailCount(selectedCount)" ng-options="count as count.val for count in quantities"></select>
-                </div>
-               
-                
-            </div>
-        </div>
+<div class="row bg-book"  ng-controller="quantityModuleController">
+       
     
-        <div class="col-md-12">
+        <div class="col-md-4 top-margin">
+           <div class="row mt-3 d-flex flex-column">
+               <div class="col-md-6 mx-auto">
+                <label for="sel1" id="white">Quantity:
+            </label>
+             <select class="form-control " id="sel1" ng-model="selectedCount" ng-change="seats.setAvailCount(selectedCount)" ng-options="count as count.val for count in quantities"></select>
+            </div>
+           <!--  <div class="col-md-6 mx-auto">
+            <label for="name" id="white">Name</label>   
+             <input type="text" id="name" ng-model="name" class="form-control">
+            </div> -->
+        <div class="col-md-6 mt-3 mx-auto">
+         <p for="seatsLeft" id="white">Seats left to choose  : {{seats.availCount.val}}</p>
+                                    
+                       
+        </div>
+        <div class="col-md-6 mx-auto">
+                <p for="seatsLeft" id="white">Movie   : Lorem ipsum dolor sim amet</p>
+     </div>
+     <div class="col-md-6 mx-auto">
+            <p for="seatsLeft" id="white">Date : 07/12/2019 </p>              
+     </div>
+     <div class="col-md-6 mx-auto">
+            <p for="seatsLeft" id="white">Time  : 12:00</p>
+                        
+           </div>
+           <div class="col-md-6 mx-auto">
            
-            <div class="table-responsive ">
-               
-             
-                Seats left:
-                {{seats.availCount.val}}<br/>
-               
-                <table class="table mx-auto" style="width: auto">
+                <p style="color:white;">Seats chosen : {{alertMsg.join(', ')}}</p>
+            
+            </div>
+           <div class="col-md-6 mx-auto mb-3">
+                                
+                <button class="btn cta proceed" ng-click="storeSeat()">Confirm</button>
+            
+            </div>
+           
+                </div> 
+                        </div>
+                    
+           
+           
+        <div class=" col-md-4 top-margin">
+            <div class="table-responsive col-md-12">
+              
+                <table class="table mx-auto" style="width: auto;float:right">
+                    <tr>
+                        <td>
+                                <div class="screen" >
+                                        SCREEN
+                                </div>
+                        </td>
+                    </tr>
                     <tr ng-repeat="row in seats.map[seatQuality].seats" class="row">
                      
                         <td class="SRow1">
                             <div class="itemSeat d-flex flex-row" ng-repeat="seat in row">
-                                <div  ng-show="$first" style="text-align: center;width:20px" >{{seat.letter}}</div>
+                                <div  ng-show="$first" style="text-align: center;width:20px;color:white;" >{{seat.letter}}</div>
                                 <a ng-class="{'selected': seat.check, 'available': (!seat.check && !seat.booked),  'blocked': seat.booked}" ng-click="seats.select({rang:seatQuality, row:row, seat: seat}, selectedCount)">{{seat.val}}</a>
                             </div>
                         </td>
                     </tr>
-                    <tr>
-                        <td >
-                            <div>
-                                <a>
-                                        <button class="cta proceed" ng-click="storeSeat()">Finish</button>
-                                    </a>
-                                    </div>
-                        </td>
-                    </tr>
+                   
+                            
+                        
                 </table>
                
             </div>
-    
-        </div>
-    </div>
+            </div>
+            <div class="col-md-4 d-flex flex-column my-auto">
+                
+                  <div class="legend" style="margin-bottom: 20px;">
+                    
+                        <button  type="button" class="btn btn-danger btn-legend " ></button>
+                                <p style="overflow: hidden;color:white">Reserved Seat</p>
+                  </div>
+                      <div class="legend" style="margin-bottom: 20px;">
+                        
+                            <button type="button" class="btn btn-success btn-legend " ></button>
+                            <p style="color:white;">Available Seat</p>
+                      </div>     
+                          <div class="legend" style="margin-bottom: 20px;">
+                           
+                                <button type="button" class="btn btn-warning btn-legend" ></button>
+                                <p style="color:white">Your Choice</p>
+                          </div>           
+        </div>            
+   </div>
    
+
 
     
     
