--- a/frontend/views/partials/shared/navbar.html
+++ b/frontend/views/partials/shared/navbar.html
@@ -1,6 +1,6 @@
 <div class="continut">
 
-    <nav class="navbar  navbar-expand-md" id="navigare" ng-class="{'transparent' : !isUserAdmin(), 'navbar-admin' :isCurrentRoute('/adminpage'),'transparent': isCurrentRoute('/movies'),'navbar-dark bg-dark': isCurrentRoute('/'),}">
+    <nav class="navbar  navbar-expand-md" id="navigare" ng-class="{'transparent' : !isUserAdmin(), 'navbar-admin' :isCurrentRoute('/adminpage'),'transparent': isCurrentRoute('/movies'),'navbar-dark bg-dark': isCurrentRoute('/') || isCurrentRoute('/book')}">
         <div class="container">
             <a class="navbar-brand" href="#">
                 <img src="../../../images/logos/logo_transparent-small.png" style="height:90px; width:150px" alt="">
@@ -14,21 +14,21 @@
             <div class="collapse navbar-collapse" id="navbarResponsive">
                 <ul class="navbar-nav ml-auto">
                     <li class="nav-item mystyle" ng-class="{'active': isCurrentRoute('/')}">
-                        <a class="nav-link" href="#"><i class="fa  fa-home"></i>  Home
-                      
+                        <a class="nav-link" href="#"><i class="fa  fa-home"></i>  Home 
                     </a>
                     </li>
                     <li class="nav-item mystyle" ng-class="{'active': isCurrentRoute('/movies')}">
                         <a class="nav-link" href="/index.html#!/movies"><i class="fa fa-film"></i>  Movies</a>
+                    </li>
+                    <li ng-if="isCurrentRoute('/book') " class="nav-item mystyle" ng-class="{'active': isCurrentRoute('/book')}">
+                        <a class="nav-link" href="/index.html#!/book"><i class="fa fa-ticket"></i>  Booking</a>
                     </li>
                     <li class="nav-item mystyle">
                      
                             <a class="nav-link" class="trigger-btn" ng-click="openLoginModal()">
                                 <i class="fa fa-fw fa-user"></i>
                                 {{ loginButtonText() }}
-                            </a>  
-                      
-
+                            </a> 
                     </li>
                 </ul>
             </div>
