--- a/frontend/views/movies.html
+++ b/frontend/views/movies.html
@@ -1,4 +1,4 @@
-<div class="continut bg-gray height mt-5"  >
+<div class="continut bg-gray height mt-5">
     <div class="wrapper-movies flex-column mx-auto col-md-9">
         <div class="row flex-column justify-content-center">
 
@@ -9,8 +9,8 @@
 
                     <div class="control col-md-10 mx-auto">
                         <laber for="date-birth" class="date-select">Select a date</laber>
-                        <input id="date-birth" class="form-control col-md-5  " type="date" style="margin-left:20px; "ng-model="movieDate"></div>
-                 
+                        <input id="date-birth" class="form-control col-md-5  " type="date" style="margin-left:20px; " ng-model="movieDate"></div>
+
                 </div>
                 <div class="row" ng-if="clicked">
                     <p class="date-select">
@@ -36,8 +36,7 @@
                 <tbody role="rowgroup">
                     <tr role="row" ng-repeat="movie in movies | dateFilter: movieDate ">
                         <td style="width:auto;">
-                            <p class="movie-title"><img ng-src="../images/{{movie.src}}"
-                                    class="movie-image">{{movie.title}}</p>
+                            <p class="movie-title"><img ng-src="../images/{{movie.src}}" class="movie-image">{{movie.title}}</p>
                         </td>
                         </td>
                         <td style="width:auto;">
@@ -48,7 +47,7 @@
                             <p class="movie-title movie-attr">{{movie.room}}</p>
                         </td>
                         <td><button class="btn btn-about" ng-click="openMovieDetails(movie.id)">About</button></td>
-                        <td><button class="btn btn-book">Book</button></td>
+                        <td><button class="btn btn-book" ng-click="bookMovie(movie.id)">Book</button></td>
                     </tr>
                 </tbody>
             </table>
@@ -61,40 +60,37 @@
         font-family: 'Archivo Narrow', cursive;
         color: white;
     }
-
     /*
         Max width before this PARTICULAR table gets nasty. This query will take effect for any screen smaller than 760px and also iPads specifically.
         */
+    
     .movie-image {
         width: 60px;
         height: 50px;
         float: left;
         margin-right: 20px;
     }
-
+    
     .img-movie {
         height: auto;
         width: 60px;
         margin-right: 20px;
     }
-
+    
     .table td {
         text-align: center;
         border-top: none !important;
     }
-
+    
     @media only screen and (max-width: 760px),
     (min-device-width: 768px) and (max-device-width: 1024px) {
-
         /* Force table to not be like tables anymore */
         .movie-title {
             font-size: 14px;
         }
-
         .movie-title.movie-attr {
             margin-top: 25px;
         }
-
         table,
         thead,
         tbody,
@@ -103,34 +99,28 @@
         tr {
             display: block;
         }
-
         /* Hide table headers (but not display: none;, for accessibility) */
         thead tr {
             position: absolute;
             top: -9999px;
             left: -9999px;
         }
-
         .movie-image {
             float: none;
             margin-right: 10px;
             margin-top: 10px;
             height: 70px;
         }
-
         .table td {
             padding-left: 110px;
             padding-top: 1px;
             padding-right: 1px;
             padding-bottom: 1px;
             border-top: 1px solid white !important;
-
         }
-
         tr {
             margin: 0 0 1rem 0;
         }
-
         td {
             /* Behave  like a "row" */
             border: none;
@@ -138,7 +128,6 @@
             position: relative;
             padding-left: 50%;
         }
-
         td:before {
             /* Now like a table header */
             position: absolute;
@@ -149,7 +138,6 @@
             padding-right: 10px;
             white-space: nowrap;
         }
-
         /*
           Label the data
           You could also use a data-* attribute and content for this. That way "bloats" the HTML, this way means you need to keep HTML and CSS in sync. Lea Verou has a clever way to handle with text-shadow.
@@ -158,24 +146,19 @@
             content: "Movie";
             margin-left: -25px;
         }
-
         td:nth-of-type(2):before {
             content: "Start";
             margin-left: -25px;
         }
-
         td:nth-of-type(3):before {
             content: "Room";
             margin-left: -25px;
         }
-
         td:nth-of-type(4):before {
             content: "";
         }
-
         td:nth-of-type(5):before {
             content: "";
         }
-
     }
 </style>
